src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Add-On to Existing License</fullName>
        <description>Use this Opportunity type when adding agents to an existing license</description>
        <isActive>true</isActive>
        <values>
            <fullName>A1 - Pipeline Generation</fullName>
        </values>
        <values>
            <fullName>B2 - First Meeting%2FQualification</fullName>
        </values>
        <values>
            <fullName>C3 - Technical Deep Dive%2FMetrics Qualify</fullName>
        </values>
        <values>
            <fullName>D4 - Business Engagement w%2F Champion</fullName>
        </values>
        <values>
            <fullName>E5 - Identify Path to Close</fullName>
        </values>
        <values>
            <fullName>F6 - Validate Business Case</fullName>
        </values>
        <values>
            <fullName>G7 - Proof of Value</fullName>
        </values>
        <values>
            <fullName>H8 - Present Business Case %26 POV</fullName>
        </values>
        <values>
            <fullName>I12 - Inactive</fullName>
        </values>
        <values>
            <fullName>I9 - Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>L10 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>W10 - Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Deal Registration Opportunity Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A1 - Pipeline Generation</fullName>
        </values>
        <values>
            <fullName>B2 - First Meeting%2FQualification</fullName>
        </values>
        <values>
            <fullName>C3 - Technical Deep Dive%2FMetrics Qualify</fullName>
        </values>
        <values>
            <fullName>D4 - Business Engagement w%2F Champion</fullName>
        </values>
        <values>
            <fullName>E5 - Identify Path to Close</fullName>
        </values>
        <values>
            <fullName>F6 - Validate Business Case</fullName>
        </values>
        <values>
            <fullName>G7 - Proof of Value</fullName>
        </values>
        <values>
            <fullName>H8 - Present Business Case %26 POV</fullName>
        </values>
        <values>
            <fullName>I12 - Inactive</fullName>
        </values>
        <values>
            <fullName>I9 - Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>L10 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>W10 - Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Demo</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>A1 - Pipeline Generation</fullName>
        </values>
        <values>
            <fullName>B2 - First Meeting%2FQualification</fullName>
        </values>
        <values>
            <fullName>C3 - Technical Deep Dive%2FMetrics Qualify</fullName>
        </values>
        <values>
            <fullName>D4 - Business Engagement w%2F Champion</fullName>
        </values>
        <values>
            <fullName>E5 - Identify Path to Close</fullName>
        </values>
        <values>
            <fullName>F6 - Validate Business Case</fullName>
        </values>
        <values>
            <fullName>G7 - Proof of Value</fullName>
        </values>
        <values>
            <fullName>H8 - Present Business Case %26 POV</fullName>
        </values>
        <values>
            <fullName>I12 - Inactive</fullName>
        </values>
        <values>
            <fullName>I9 - Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>L10 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>W10 - Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewals Sales Process</fullName>
        <description>This sales process is used for subscription and maintenance renewals.</description>
        <isActive>true</isActive>
        <values>
            <fullName>A1 - Pipeline Generation</fullName>
        </values>
        <values>
            <fullName>B2 - First Meeting%2FQualification</fullName>
        </values>
        <values>
            <fullName>C3 - Technical Deep Dive%2FMetrics Qualify</fullName>
        </values>
        <values>
            <fullName>D4 - Business Engagement w%2F Champion</fullName>
        </values>
        <values>
            <fullName>E5 - Identify Path to Close</fullName>
        </values>
        <values>
            <fullName>F6 - Validate Business Case</fullName>
        </values>
        <values>
            <fullName>G7 - Proof of Value</fullName>
        </values>
        <values>
            <fullName>H8 - Present Business Case %26 POV</fullName>
        </values>
        <values>
            <fullName>I12 - Inactive</fullName>
        </values>
        <values>
            <fullName>I9 - Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>L10 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>W10 - Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Standard Sales Process</fullName>
        <description>Process used for standard opportunities</description>
        <isActive>true</isActive>
        <values>
            <fullName>A1 - Pipeline Generation</fullName>
        </values>
        <values>
            <fullName>B2 - First Meeting%2FQualification</fullName>
        </values>
        <values>
            <fullName>C3 - Technical Deep Dive%2FMetrics Qualify</fullName>
        </values>
        <values>
            <fullName>D4 - Business Engagement w%2F Champion</fullName>
        </values>
        <values>
            <fullName>E5 - Identify Path to Close</fullName>
        </values>
        <values>
            <fullName>F6 - Validate Business Case</fullName>
        </values>
        <values>
            <fullName>G7 - Proof of Value</fullName>
        </values>
        <values>
            <fullName>H8 - Present Business Case %26 POV</fullName>
        </values>
        <values>
            <fullName>I12 - Inactive</fullName>
        </values>
        <values>
            <fullName>I9 - Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>L10 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>W10 - Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Subscription and Maintenance Renewal</fullName>
        <description>Use when renewing Subscription and Annual Maintenance Licenses</description>
        <isActive>true</isActive>
        <values>
            <fullName>A1 - Pipeline Generation</fullName>
        </values>
        <values>
            <fullName>B2 - First Meeting%2FQualification</fullName>
        </values>
        <values>
            <fullName>C3 - Technical Deep Dive%2FMetrics Qualify</fullName>
        </values>
        <values>
            <fullName>D4 - Business Engagement w%2F Champion</fullName>
        </values>
        <values>
            <fullName>E5 - Identify Path to Close</fullName>
        </values>
        <values>
            <fullName>F6 - Validate Business Case</fullName>
        </values>
        <values>
            <fullName>G7 - Proof of Value</fullName>
        </values>
        <values>
            <fullName>H8 - Present Business Case %26 POV</fullName>
        </values>
        <values>
            <fullName>I12 - Inactive</fullName>
        </values>
        <values>
            <fullName>I9 - Negotiate and Close</fullName>
        </values>
        <values>
            <fullName>L10 - Closed Lost</fullName>
        </values>
        <values>
            <fullName>W10 - Closed%2FWon</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACV__c</fullName>
        <label>ACV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AD_Employee_Engaged__c</fullName>
        <inlineHelpText>Have you engaged an AppDynamics employee?</inlineHelpText>
        <label>AD Employee Engaged</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>AD_Partner_Engaged_Employee__c</fullName>
        <label>AD Partner Engaged Employee</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountRecordType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_and_Account_Owner_ID__c</fullName>
        <formula>Account.Id &amp; &quot;|&quot; &amp;  Account.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID I Account Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adoption_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Adoption Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adoption_Score__c</fullName>
        <description>The adoption score is the average of multiple numbers describing customer adoption. It starts at 1.0 for a new customer and the highest value is 3.0 with two decimals being stored.</description>
        <inlineHelpText>Please enter the customer adoption score</inlineHelpText>
        <label>External Adoption Score</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_USD__c</fullName>
        <label>Amount USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AppDynamics_Revenue__c</fullName>
        <formula>Amount * (1-  Partner_Involved__r.Margin_Discount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AppDynamics Bookings</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AppServers__c</fullName>
        <description>App Servers used in the opportunity enviornment</description>
        <inlineHelpText>Select all that apply. If other is selected, note which app server in notes.</inlineHelpText>
        <label>AppServers</label>
        <picklist>
            <picklistValues>
                <fullName>WebLogic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebSphere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TomCat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jetty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glassfish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jBoss</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netweaver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>App_Runtimes__c</fullName>
        <description>Application Runtime Environments</description>
        <inlineHelpText>Select all that apply. If other add specifics in notes.</inlineHelpText>
        <label>App Runtimes</label>
        <picklist>
            <picklistValues>
                <fullName>Java 1.5+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy Java 1.4-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>.Net 2.0+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legacy .Net 1.1-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Python</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruby</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Application_Stack__c</fullName>
        <description>Multi select list of Application Stacks.
Help Text displayed on the Deal Reg page for partner entry into this field</description>
        <inlineHelpText>What is the client&apos;s existing application stack?</inlineHelpText>
        <label>Application Stack</label>
        <picklist>
            <picklistValues>
                <fullName>.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EUM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Java/.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>node.js</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PHP</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field is updated based on the approval status of the Opportunity</description>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Submitted</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recalled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Architect_Hours_Remaining__c</fullName>
        <label>Architect Hours Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avg_Close__c</fullName>
        <formula>IF(IsClosed = TRUE,
(CloseDate - DATEVALUE(CreatedDate)), 
NOW() - CreatedDate)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close in Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BDR_Opportunity_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Restricted to be checked only by Executives, FSR and ISR Managers.</inlineHelpText>
        <label>BDR Opportunity Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <label>Billing Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Booked_Date__c</fullName>
        <label>Booked Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Booked_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Booked Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_Fiscal_Period__c</fullName>
        <formula>if(Booked_Date__c &gt;= date(2017, 11, 1), &quot;2018-Q4&quot;,
if(Booked_Date__c &gt;= date(2017, 8, 1), &quot;2018-Q3&quot;,
if(Booked_Date__c &gt;= date(2017, 5, 1), &quot;2018-Q2&quot;,
if(Booked_Date__c &gt;= date(2017, 2, 1), &quot;2018-Q1&quot;,
if(Booked_Date__c &gt;= date(2016, 11, 1), &quot;2017-Q4&quot;,
if(Booked_Date__c &gt;= date(2016, 8, 1), &quot;2017-Q3&quot;,
if(Booked_Date__c &gt;= date(2016, 5, 1), &quot;2017-Q2&quot;,
if(Booked_Date__c &gt;= date(2016, 2, 1), &quot;2017-Q1&quot;,
if(Booked_Date__c &gt;= date(2015, 11, 1), &quot;2016-Q4&quot;,
if(Booked_Date__c &gt;= date(2015, 8, 1), &quot;2016-Q3&quot;,
if(Booked_Date__c &gt;= date(2015, 5, 1), &quot;2016-Q2&quot;,
if(Booked_Date__c &gt;= date(2015, 2, 1), &quot;2016-Q1&quot;,
if(Booked_Date__c &gt;= date(2014, 11, 1), &quot;2015-Q4&quot;,
if(Booked_Date__c&gt;= date(2014, 8, 1), &quot;2015-Q3&quot;,
if(Booked_Date__c&gt;= date(2014, 5, 1), &quot;2015-Q2&quot;,
if(Booked_Date__c&gt;= date(2014, 2, 1), &quot;2015-Q1&quot;,
if(Booked_Date__c &gt;= date(2013, 11, 1), &quot;2014-Q4&quot;,
if(Booked_Date__c &gt;= date(2013, 8, 1), &quot;2014-Q3&quot;,
if(Booked_Date__c&gt;= date(2013, 5, 1),&quot;2014-Q2&quot;,
if(Booked_Date__c&gt;= date(2013, 2, 1), &quot;2014-Q1&quot;,
if(Booked_Date__c &gt;= date(2012, 11, 1), &quot;2013-Q4&quot;,
if(Booked_Date__c&gt;= date(2012, 8, 1), &quot;2013-Q3&quot;,
if(Booked_Date__c&gt;= date(2012, 5, 1), &quot;2013-Q2&quot;,
if(Booked_Date__c&gt;= date(2012, 2, 1), &quot;2013-Q1&quot;,
if(Booked_Date__c &gt;= date(2011, 11, 1), &quot;2012-Q4&quot;,
if(Booked_Date__c &gt;= date(2011, 8, 1), &quot;2012-Q3&quot;,
if(Booked_Date__c&gt;= date(2011, 5, 1),&quot;2012-Q2&quot;,
if(Booked_Date__c&gt;= date(2011, 2, 1), &quot;2012-Q1&quot;,
if(Booked_Date__c &gt;= date(2010, 11, 1), &quot;2011-Q4&quot;,
if(Booked_Date__c &gt;= date(2010, 8, 1), &quot;2011-Q3&quot;,
if(Booked_Date__c&gt;= date(2010, 5, 1), &quot;2011-Q2&quot;,
if(Booked_Date__c&gt;= date(2010, 2, 1), &quot;2011-Q1&quot;,
if(Booked_Date__c &gt;= date(2009, 11, 1), &quot;2010-Q4&quot;,
if(Booked_Date__c&gt;= date(2009, 8, 1), &quot;2010-Q3&quot;,
if(Booked_Date__c &gt;= date(2009, 5, 1), &quot;2010-Q2&quot;,
if(Booked_Date__c&gt;= date(2009, 2, 1), &quot;2010-Q1&quot;, null))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booked Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budgetary_Quote_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if you have extended a budgetary quote to the prospective client</description>
        <inlineHelpText>Check this box if you have extended a budgetary quote to the prospective client</inlineHelpText>
        <label>Budgetary Quote Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Workflow updates this checkbox based on an Order Ops case being created</description>
        <label>Case Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Celigo_Sync_Helper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Sync Helper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Celigo_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Celigo Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Champion_MEDDICC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Champion (MEDDICC)</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Champion (MEDDIC))</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Changed_Deployments__c</fullName>
        <label>Changed Deployments</label>
        <picklist>
            <picklistValues>
                <fullName>Changed to SaaS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Changed to On-Prem</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Classroom_Training_Units__c</fullName>
        <label>Classroom Training Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Closed_Fiscal_Period__c</fullName>
        <formula>if(CloseDate &gt;= date(2017, 11, 1), &quot;2018-Q4&quot;,
if(CloseDate &gt;= date(2017, 8, 1), &quot;2018-Q3&quot;,
if(CloseDate &gt;= date(2017, 5, 1), &quot;2018-Q2&quot;,
if(CloseDate &gt;= date(2017, 2, 1), &quot;2018-Q1&quot;,
if(CloseDate &gt;= date(2016, 11, 1), &quot;2017-Q4&quot;,
if(CloseDate &gt;= date(2016, 8, 1), &quot;2017-Q3&quot;,
if(CloseDate &gt;= date(2016, 5, 1), &quot;2017-Q2&quot;,
if(CloseDate &gt;= date(2016, 2, 1), &quot;2017-Q1&quot;,
if(CloseDate &gt;= date(2015, 11, 1), &quot;2016-Q4&quot;,
if(CloseDate &gt;= date(2015, 8, 1), &quot;2016-Q3&quot;,
if(CloseDate &gt;= date(2015, 5, 1), &quot;2016-Q2&quot;,
if(CloseDate &gt;= date(2015, 2, 1), &quot;2016-Q1&quot;,
if(CloseDate &gt;= date(2014, 11, 1), &quot;2015-Q4&quot;,
if(CloseDate&gt;= date(2014, 8, 1), &quot;2015-Q3&quot;,
if(CloseDate&gt;= date(2014, 5, 1), &quot;2015-Q2&quot;,
if(CloseDate&gt;= date(2014, 2, 1), &quot;2015-Q1&quot;,
if(CloseDate &gt;= date(2013, 11, 1), &quot;2014-Q4&quot;,
if(CloseDate &gt;= date(2013, 8, 1), &quot;2014-Q3&quot;,
if(CloseDate&gt;= date(2013, 5, 1),&quot;2014-Q2&quot;,
if(CloseDate&gt;= date(2013, 2, 1), &quot;2014-Q1&quot;,
if(CloseDate &gt;= date(2012, 11, 1), &quot;2013-Q4&quot;,
if(CloseDate&gt;= date(2012, 8, 1), &quot;2013-Q3&quot;,
if(CloseDate&gt;= date(2012, 5, 1), &quot;2013-Q2&quot;,
if(CloseDate&gt;= date(2012, 2, 1), &quot;2013-Q1&quot;,
if(CloseDate &gt;= date(2011, 11, 1), &quot;2012-Q4&quot;,
if(CloseDate &gt;= date(2011, 8, 1), &quot;2012-Q3&quot;,
if(CloseDate&gt;= date(2011, 5, 1),&quot;2012-Q2&quot;,
if(CloseDate&gt;= date(2011, 2, 1), &quot;2012-Q1&quot;,
if(CloseDate &gt;= date(2010, 11, 1), &quot;2011-Q4&quot;,
if(CloseDate &gt;= date(2010, 8, 1), &quot;2011-Q3&quot;,
if(CloseDate&gt;= date(2010, 5, 1), &quot;2011-Q2&quot;,
if(CloseDate&gt;= date(2010, 2, 1), &quot;2011-Q1&quot;,
if(CloseDate &gt;= date(2009, 11, 1), &quot;2010-Q4&quot;,
if(CloseDate&gt;= date(2009, 8, 1), &quot;2010-Q3&quot;,
if(CloseDate &gt;= date(2009, 5, 1), &quot;2010-Q2&quot;,
if(CloseDate&gt;= date(2009, 2, 1), &quot;2010-Q1&quot;, null))))))))))))))))))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed Fiscal Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Commission_Expiration_Date_Final__c</fullName>
        <defaultValue>today() + 360</defaultValue>
        <description>360 days from opportunity creation date. Used in the Commission Expiration Date validation rule to make sure the expiration date isn&apos;t set beyond 360 days.</description>
        <label>Commission Expiration Date - Final</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Expiration_Date_Helper__c</fullName>
        <description>Used with the Commission Expiration Date field to help drive the workflow to send an email 15 days before the date.</description>
        <label>Commission Expiration Date Helper</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Commission_Expiration_Date__c</fullName>
        <defaultValue>today() + 180</defaultValue>
        <inlineHelpText>The date the opportunity must close by in order for a partner to receive a commission. Defaults to 180 days out and can be pushed out to 360 days by the Sales Rep</inlineHelpText>
        <label>Commission Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <inlineHelpText>Select competition for the deal. If other, put specifics in notes.</inlineHelpText>
        <label>Competition</label>
        <picklist>
            <picklistValues>
                <fullName>NONE</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Amberpoint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppNeta/Traceview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aternity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avicode/MSFT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BlueStripe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compuware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Correlsense</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Crittercism</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynatrace</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ExtraHop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IBM Tivoli</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ITCAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loggly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Netuitive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Relic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpNet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpScope</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OpTier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Precise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ruxit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smartbear/Lucierna</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solarwinds/Confio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Splunk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SumoLogic</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Competitive_Deal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitive Deal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Competitor_Exists__c</fullName>
        <label>Competitor Exists</label>
        <summaryForeignKey>Competitor__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Competitor_Line_Items__c</fullName>
        <description>This field is used to count the number of competitors on an Opportunity. It is used in a validation rule to enforce the user to enter a Competitor before moving it to Stage W10 Closed.</description>
        <label>Competitor Line Items</label>
        <summaryForeignKey>Competitor__c.Opportunity__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Converted_Amount_del__c</fullName>
        <formula>IF( ISPICKVAL(CurrencyIsoCode, &quot;JPY&quot;) ,  Amount/(103.000000),  IF(ISPICKVAL(CurrencyIsoCode, &quot;AUD&quot;), Amount/(1.080000),  IF(ISPICKVAL(CurrencyIsoCode, &quot;EUR&quot;), Amount/(0.733400),  IF(ISPICKVAL(CurrencyIsoCode, &quot;GBP&quot;), Amount/(0.606060),  IF(ISPICKVAL(CurrencyIsoCode, &quot;SEK&quot;), Amount/(6.475800),  IF(ISPICKVAL(CurrencyIsoCode, &quot;USD&quot;), Amount, null) ) ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Converted Amount (USD)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_by_ID_Profile__c</fullName>
        <formula>CreatedBy.Id  &amp; &quot; | &quot; &amp;  CreatedBy.Profile.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by ID &amp; Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_User__c</fullName>
        <description>Used to understand if the active sales rep has created the opportunity</description>
        <formula>IF(CreatedById = $User.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created by User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Technical_Document_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box one the &quot;Customer Technical Information Tracking Form&quot; is attached to the Opportunity.</inlineHelpText>
        <label>Customer Technical Document Attached</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_requires_dedicated_controller__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used by ops to monitor opportunities for advance notice of the requirement for a dedicated controller.</description>
        <inlineHelpText>Please click this field if the customer will require a dedicated controller after purchase.</inlineHelpText>
        <label>Customer requires dedicated controller?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_s_Purchase_Order_Number__c</fullName>
        <description>Customer&apos;s purchase order number for quoting.</description>
        <label>Customer&apos;s Purchase Order Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Address__c</fullName>
        <description>Address at which the prospect resides. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DR_City__c</fullName>
        <description>City in which the prospect resides. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Company_Name__c</fullName>
        <inlineHelpText>Value entered by partner after being unable to find the company from the D&amp;B lookup</inlineHelpText>
        <label>DR Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Company_Not_Found__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DR Company Not Found</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DR_Contact_First_Name__c</fullName>
        <description>First Name of customer primary contact. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Contact First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Contact_Last_Name__c</fullName>
        <description>Last Name of customer primary contact. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Contact Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Contact_Phone__c</fullName>
        <description>Phone of customer primary contact. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DR_Country__c</fullName>
        <description>Country in which the prospect resides. Populated when the company is not found in the D&amp;B search</description>
        <label>DR Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DR_Deal_Timeframe__c</fullName>
        <label>DR Deal Timeframe</label>
        <picklist>
            <picklistValues>
                <fullName>Next 30 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31-90 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>91-180 Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>180 + Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DR_Email_Address__c</fullName>
        <description>Email address of customer primary contact. Populated when the company is not found in the D&amp;B search.</description>
        <label>DR Email Address</label>
        <type>Email</type>
    </fields>
</CustomObject>